--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.37.1
-pandas==2.2.2
-numpy==1.26.4
-plotly==5.24.0
-openpyxl==3.1.5
-python-dotenv==1.0.1
+streamlit>=1.32
+pandas>=2.1
+numpy>=1.26
+plotly>=5.24
+openpyxl>=3.1
+python-dotenv>=1.0
